<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="standalone_app_label" translatable="false">Etar</string>
    <string name="app_label">Calendar</string>
    <string name="when_label">When</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">"Today at <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="tomorrow_at_time_fmt">"Tomorrow at <xliff:g id="time_interval">%s</xliff:g>"</string>
    <string name="date_time_fmt">"<xliff:g id="date">%1$s</xliff:g>, <xliff:g id="time_interval">%2$s</xliff:g>"</string>
    <string name="no_title_label">(No title)</string>
    <string name="no_reminder_label">None</string>
    <string name="no_snooze_label">None</string>
    <plurals name="Nminutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nmins">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="Nhours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Ndays">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="Nweeks">
        
        <item quantity="one">1 week</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> weeks</item>
    </plurals>
    <plurals name="weekN">
        
        <item quantity="other">Week <xliff:g id="count">%d</xliff:g></item>
    </plurals>
    <string name="calendar_refresh">"Refresh"</string>
    <string name="show_day_view">"Show day"</string>
    <string name="agenda_view">"Agenda"</string>
    <string name="day_view">"Day"</string>
    <string name="week_view">"Week"</string>
    <string name="month_view">"Month"</string>
    <string name="event_view">"View event"</string>
    <string name="event_create">"New event"</string>
    <string name="event_edit">"Edit event"</string>
    <string name="event_delete">"Delete event"</string>
    <string name="share_label">Share</string>
    <string name="goto_today">"Today"</string>
    <string name="goto_date">Go to\u2026</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="menu_info">Info</string>
    <string name="search">"Search"</string>
    <string name="hide_controls">"Hide controls"</string>
    <string name="show_controls">"Show controls"</string>
    <string name="view_settings">"View settings"</string>
    <string name="select_synced_calendars_button">Calendars to sync</string>
    <string name="hint_what">"Event name"</string>
    <string name="hint_where">"Location"</string>
    <string name="hint_description">"Description"</string>
    <string name="hint_url">"URL"</string>
    <string name="hint_attendees">"Guests"</string>
    <string name="creating_event">"Event created."</string>
    <string name="saving_event">"Event saved."</string>
    <string name="empty_event">"Empty event not created."</string>
    <string name="creating_event_with_guest">"Invitations will be sent."</string>
    <string name="saving_event_with_guest">"Updates will be sent."</string>
    <string name="rsvp_accepted">"Responded yes."</string>
    <string name="rsvp_tentative">"Responded maybe."</string>
    <string name="rsvp_declined">"Responded no."</string>
    <string name="create_event_dialog_save">Save</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="foreground_notification_title">Scheduling new reminders…</string>
    <string name="foreground_notification_channel_name">Background tasks</string>
    <string name="foreground_notification_channel_description">Notifications required for internal sync. You can safely hide this channel.</string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="reminders_label">Add reminder</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_calendars_found">Before you can add an event, you must add at least one calendar to your device</string>
    <string name="add_calendar">Add calendar</string>
    <string name="view_event_calendar_label">Calendar:</string>
    <string name="view_event_organizer_label">Organizer:</string>
    <string name="choose_event_color_label">Choose event color</string>
    <string name="event_color_picker_dialog_title">Event Color</string>
    <string name="event_color_set_to_default">Set to default calendar color</string>
    <string name="calendar_color_picker_dialog_title">Calendar Color</string>
    <string name="calendar_square_color_picker_description">Color picker</string>
    <string name="view_event_response_label">Attending?</string>
    <string name="response_yes">Yes</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="email_guests_label">Email guests</string>
    <string name="email_organizer_label">Email organizer</string>
    <string name="email_picker_label">Email with</string>
    <string name="email_subject_prefix" translatable="false">Re:\u0020</string>
    <string name="event_not_found">"Event not found."</string>
    <string name="map_label">Map</string>
    <string name="no_map">There is no maps app installed</string>
    <string name="call_label">Call</string>
    <string name="quick_response_settings">Quick responses</string>
    <string name="quick_response_settings_summary">Edit default responses when emailing guests</string>
    <string name="quick_response_settings_edit_title">Quick response</string>
    <string name="quick_response_dialog_title">Choose quick response</string>
    <string name="quick_response_email_failed">Failed to find an email program</string>
    <string-array name="quick_response_defaults">
        <item>Running just a couple of minutes late.</item>
        <item>Be there in about 10 minutes.</item>
        <item>Go ahead and start without me.</item>
        <item>Sorry, I can\'t make it. We\'ll have to reschedule.</item>
        </string-array>
    <string name="quick_response_custom_msg">Write your own\u2026</string>
    <string name="event_info_organizer">Organizer:</string>
    <string name="event_info_reminders_label">Reminders</string>
    <string name="agenda_today">Today, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="agenda_yesterday">Yesterday, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="agenda_tomorrow">Tomorrow, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="loading">Loading\u2026</string>
    <string name="show_older_events">Touch to view events before <xliff:g id="oldest_search_range">%1$s</xliff:g></string>
    <string name="show_newer_events">Touch to view events after <xliff:g id="newest_search_range">%1$s</xliff:g></string>
    <string name="search_title">Search my calendars</string>
    <string name="edit_event_label">"Details"</string>
    <string name="edit_label">"Edit"</string>
    <string name="delete_label">"Delete"</string>
    <string name="duplicate_label">Duplicate</string>
    <string name="save_label">Done</string>
    <string name="discard_label">Cancel</string>
    <string name="dismiss_all_label">"Dismiss all"</string>
    <string name="snooze_label">"Snooze"</string>
    <string name="does_not_repeat">One-time event</string>
    <string name="endByDate">; until <xliff:g id="date">%s</xliff:g></string>
    <plurals name="endByCount">
        <item quantity="one">; for one time</item>
        <item quantity="other">; for <xliff:g id="number">%d</xliff:g> times</item>
    </plurals>
    <plurals name="daily">
        <item quantity="one">Daily</item>
        <item quantity="other">Every <xliff:g id="number">%d</xliff:g> days</item>
    </plurals>
    <string name="every_weekday">"Every weekday (Mon\u2013Fri)"</string>
    <plurals name="weekly">
        <item quantity="one">Weekly on <xliff:g id="days_of_week">%2$s</xliff:g></item>
        <item quantity="other">Every <xliff:g id="number">%1$d</xliff:g> weeks on <xliff:g id="days_of_week">%2$s</xliff:g></item>
    </plurals>
    <string name="monthly">Monthly</string>
    <string name="yearly_plain">Yearly</string>
    <string name="custom" product="default">"Custom (can\'t customize on phone)"</string>
    <string name="modify_event">Change only this event</string>
    <string name="modify_all">Change all events in the series</string>
    <string name="modify_all_following">Change this and all future events</string>
    <string name="new_event_dialog_label">"New event"</string>
    <string name="new_event_dialog_option">"New event"</string>
    <string name="delete_this_event_title">Delete this event?</string>
    <string name="delete_recurring_event_title">Delete <xliff:g id="eventtitle">%s</xliff:g>?</string>
    <string name="change_response_title">Change response</string>
    <string name="preferences_title">"Settings"</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_month_view_portrait">Month view layout (Portrait)</string>
    <string name="preferences_month_view_landscape">Month view layout (Landscape)</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_system_theme">System default</string>
    <string name="preferences_light_theme">Light</string>
    <string name="preferences_dark_theme">Dark</string>
    <string name="preferences_black_theme">Black</string>
    <string name="preferences_color">Primary color</string>
    <string name="preferences_color_teal" translatable="false">Teal</string>
    <string name="preferences_color_blue" translatable="false">Blue</string>
    <string name="preferences_color_orange" translatable="false">Orange</string>
    <string name="preferences_color_green" translatable="false">Green</string>
    <string name="preferences_color_red" translatable="false">Red</string>
    <string name="preferences_color_purple" translatable="false">Purple</string>
    <string name="preferences_color_pick">Primary color</string>
    <string name="preferences_real_event_colors">Use real event colors</string>
    <string name="preferences_pure_black_night_mode">Pure black night mode</string>
    <string name="app_authors" translatable="false">The Etar Project</string>
    <string name="app_license" translatable="false">GPLv3</string>
    <string name="authors">Authors</string>
    <string name="changelog">Changelog</string>
    <string name="license">License</string>
    <string name="preferences_build_version">Build version</string>
    <string name="preferences_issues">Report issues</string>
    <string name="source_code">Source</string>
    <string name="cal_import_menu_title">Import event</string>
    <string name="preferences_menu_about">About Etar</string>
    <string name="preferences_category_colors_loading">Loading…</string>
    <string name="category_color_dialog_preview">Sample event</string>
    <string name="category_color_dialog_hex_hint">Hexadecimal color (#RRGGBB)</string>
    <string name="category_color_dialog_delete">Delete the category</string>
    <string name="category_color_dialog_suggested">Offer in the event editor suggestions</string>
    <string name="category_filter_all">All</string>
    <string name="category_filter_none">None</string>
</resources>