<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/day_menu_item"
            android:checked="true"
            android:icon="@drawable/outline_calendar_view_day"
            android:title="@string/day_view" />
        <item
            android:id="@+id/week_menu_item"
            android:icon="@drawable/outline_calendar_view_week"
            android:title="@string/week_view" />
        <item
            android:id="@+id/month_menu_item"
            android:icon="@drawable/outline_calendar_view_month"
            android:title="@string/month_view" />

        <item
            android:id="@+id/agenda_menu_item"
            android:icon="@drawable/outline_view_agenda"
            android:title="@string/agenda_view" />

    </group>
    <group android:id="@+id/navigation_subheader" android:checkableBehavior="none">
        <item
            android:id="@+id/action_settings"
            android:alphabeticShortcut="s"
            android:icon="@drawable/outline_settings"
            android:title="@string/menu_preferences" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/preferences_menu_about" />

    </group>
</menu>
